# KMeansColorPalette

./: .gitignore  README.md  requirements.txt
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  pyproject.toml  toml_gen.py
src/kmeans_color_palette/: about.py  desktop.py  program.py  program_old.py
src/kmeans_color_palette/modules/: color.py
