[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmeans_color_palette"
version = "0.1.2"
description = "Color palette generator using the k-means algorithm."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "PyQt5",
    "scikit-learn",
    "numpy",
    "Pillow",
    "opencv-python"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/KMeansColorPalette/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/KMeansColorPalette/tree/main/doc"
"Source" = "https://github.com/trucomanx/KMeansColorPalette"

[project.scripts]
"kmeans-color-palette" = "kmeans_color_palette.program:main"

[tool.setuptools]
packages = ["kmeans_color_palette", "kmeans_color_palette.modules"]

[tool.setuptools.package-data]
"kmeans_color_palette" = ["icons/logo.png","icons/check.svg"]
